--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,12 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 body {
 	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/bg.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	font-family: 'Open Sans', sans-serif;
 }
 
 
